header gap fixed

--- a/styles.css
+++ b/styles.css
@@ -98,6 +98,7 @@ body {
 .header__lower {
   display: flex;
   height: 10px;
+  margin-top: -1px;
 }
 
 .header__lower .bar-flex3 {
